Improve code coverage further.